--- a/app/design/frontend/AWA_Custom/ayo_home5_child/web/css/source/_awa-consolidated.less
+++ b/app/design/frontend/AWA_Custom/ayo_home5_child/web/css/source/_awa-consolidated.less
@@ -43773,7 +43773,7 @@ img {
 
 .loading-mask {
     background: rgba(255, 255, 255, 0.8) !important;
-    backdrop-filter: blur(2px) !important;
+    backdrop-filter: none !important;
 }
 
 /* Spinner */
